syntax/zScript.output
语法

    0 $accept: command $end

    1 command: exp NUMBER

    2 exp: exp '+' term
    3    | exp '-' term
    4    | term

    5 term: term '*' factor
    6     | factor

    7 factor: NUMBER
    8       | '(' exp ')'


Terminals, with rules where they appear

$end (0) 0
'(' (40) 8
')' (41) 8
'*' (42) 5
'+' (43) 2
'-' (45) 3
error (256)
NUMBER (258) 1 7


Nonterminals, with rules where they appear

$accept (9)
    on left: 0
command (10)
    on left: 1, on right: 0
exp (11)
    on left: 2 3 4, on right: 1 2 3 8
term (12)
    on left: 5 6, on right: 2 3 4 5
factor (13)
    on left: 7 8, on right: 5 6


State 0

    0 $accept: . command $end

    NUMBER  shift, and go to state 1
    '('     shift, and go to state 2

    command  转到状态 3
    exp      转到状态 4
    term     转到状态 5
    factor   转到状态 6


State 1

    7 factor: NUMBER .

    $default  reduce using rule 7 (factor)


State 2

    8 factor: '(' . exp ')'

    NUMBER  shift, and go to state 1
    '('     shift, and go to state 2

    exp     转到状态 7
    term    转到状态 5
    factor  转到状态 6


State 3

    0 $accept: command . $end

    $end  shift, and go to state 8


State 4

    1 command: exp . NUMBER
    2 exp: exp . '+' term
    3    | exp . '-' term

    NUMBER  shift, and go to state 9
    '+'     shift, and go to state 10
    '-'     shift, and go to state 11


State 5

    4 exp: term .
    5 term: term . '*' factor

    '*'  shift, and go to state 12

    $default  reduce using rule 4 (exp)


State 6

    6 term: factor .

    $default  reduce using rule 6 (term)


State 7

    2 exp: exp . '+' term
    3    | exp . '-' term
    8 factor: '(' exp . ')'

    '+'  shift, and go to state 10
    '-'  shift, and go to state 11
    ')'  shift, and go to state 13


State 8

    0 $accept: command $end .

    $default  接受


State 9

    1 command: exp NUMBER .

    $default  reduce using rule 1 (command)


State 10

    2 exp: exp '+' . term

    NUMBER  shift, and go to state 1
    '('     shift, and go to state 2

    term    转到状态 14
    factor  转到状态 6


State 11

    3 exp: exp '-' . term

    NUMBER  shift, and go to state 1
    '('     shift, and go to state 2

    term    转到状态 15
    factor  转到状态 6


State 12

    5 term: term '*' . factor

    NUMBER  shift, and go to state 1
    '('     shift, and go to state 2

    factor  转到状态 16


State 13

    8 factor: '(' exp ')' .

    $default  reduce using rule 8 (factor)


State 14

    2 exp: exp '+' term .
    5 term: term . '*' factor

    '*'  shift, and go to state 12

    $default  reduce using rule 2 (exp)


State 15

    3 exp: exp '-' term .
    5 term: term . '*' factor

    '*'  shift, and go to state 12

    $default  reduce using rule 3 (exp)


State 16

    5 term: term '*' factor .

    $default  reduce using rule 5 (term)
